# darkdell

./: .eslintrc.js  .gitignore  .htmllintrc  .lintstagedrc.json  Cargo.toml  Makefile  README.md  build.py  clean_output.sh  darkdell.yaml  deploy.sh  fontawesome.sh  hugo_stats.json  package-lock.json  package.json
.claude/commands/: french-review.md
.github/actions/post-checkout/: action.yml
.github/workflows/: continuous_delivery.yml  continuous_deployment.yml  continuous_integration.yml  deploy.yaml
archetypes/: default.md  projects.md
archetypes/posts/: index.md
archetypes/projects/: index.md
config/_default/: author.yaml  build.yaml  caches.yaml  config.yaml  deployment.yaml  frontmatter.yaml  imaging.yaml  markup.yaml  menus.yaml  minify.yaml  module.yaml  params.yaml  related.yaml  security.yaml  sitemap.yaml  taxonomies.yaml
content/: _index.md  about.md  ideas.md  index.md
content/about/: index.md
content/blogroll/: index.md
content/pages/: about.md  index.md  links.md  projects.md  reading.md  reminders.md
content/posts/: 2023-12-14--dark-ecology.md  2023-12-15--what-is-valuable.md  2024-01-10--the-biggest-loser-and-the-legend-of-metabolic-damage.md  2024-02-08--pathogenic-culture.md  2026-03-25-hello-again.md  2026-03-31-segregation-and-coincidence.md  2026-04-05-value.md  2026-04-06-chary.md  2026-04-13--postbabelfish.md  dark-ecology.md  have-you-seen-me-lately.md  hello-again.md  what-is-valuable.md
content/posts-fr/: 2026-03-27-bonjour.md  2026-03-31-jardinage.md  2026-04-06-le-livre-du-thé.md  _intro.md
content/projects/: _index.md  darkdell.md  sunhouse.md
public/: index.html  index.xml  sitemap.xml
public/posts/: index.html  index.xml
src/: lib.rs  main.rs
src/content/: mod.rs
src/content_type/: mod.rs
src/front_matter/: mod.rs
src/generator/: mod.rs
src/parser/: mod.rs
src/processor/: mod.rs
src/renderer/: mod.rs
src/settings/: mod.rs
src/site/: mod.rs
templates/: base.html
tests/: test_build.py
themes/: switcher.js
themes/clean/: style.css
themes/consumed/: ants.js  style.css
themes/darkdell/: theme.toml
themes/garish/: style.css
(+104 files in other folders)
