[package]
name = "darkdell"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://darkdell.net/"
repository = "https://github.com/ndouglas/darkdell/"
documentation = "https://ndouglas.github.io/darkdell/"
readme = "README.md"
keywords = ["darkdell"]
default-run = "darkdell"

[lib]
name = "darkdell"
path = "src/lib.rs"

[[bin]]
name = "darkdell"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
derivative = "2.2.0"
derive_more = "0.99.17"
log = "0.4.20"
maud = "0.25.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.56"
